# careertinder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  alembic.ini  config.example.yaml  pyproject.toml  run.py
.claude/: hotspots.md  notify.ps1  settings.json  settings.json.alternative2  settings.local.json
alembic/: env.py
alembic/versions/: 78e4764af7b0_initial_schema.py  a1b2c3d4e5f6_add_settings_table.py  b2c3d4e5f6a7_m2_filter_schema_updates.py  c3d4e5f6a7b8_m3_evaluation_schema.py  d4e5f6a7b8c9_m35_cleanup_processed_job_status.py  e5f6a7b8c9d0_m4_add_prompt_template_id.py  f6a7b8c9d0e1_m5_add_manual_source.py
docs/: how_to_start.md
docs/architecture/: adrs.md  components_r1.md
jobhunter/: cli.py
jobhunter/ai/: claude_client.py  evaluator.py  openai_client.py  response_models.py
jobhunter/config/: loader.py  schema.py
jobhunter/dashboard/: app.py
jobhunter/db/: models.py  session.py  settings.py
jobhunter/filters/: __init__.py  engine.py  service.py
jobhunter/generation/: cover_letter.py  service.py  why_company.py
jobhunter/resume/: extractor.py  manager.py
jobhunter/scrapers/: __init__.py  apify_adapters.py  apify_base.py  base.py  exceptions.py  linkedin_apify.py  linkedin_url_parser.py  orchestrator.py  rate_limiter.py  remote_io.py  remoterocketship.py  wellfound_apify.py
jobhunter/utils/: hashing.py  logging_setup.py
tests/: conftest.py  test_cli_scrape.py  test_config.py  test_generation.py  test_models.py  test_resume_extractor.py
tests/ai/: test_cli_evaluate.py  test_evaluator.py  test_response_models.py
(+80 files in other folders)
